# ChangeLog for dev-java/oracle-jdk-bin
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/oracle-jdk-bin/ChangeLog,v 1.89 2015/03/26 15:52:34 monsieurp Exp $

  26 Mar 2015; Patrice Clement <monsieurp@gentoo.org> metadata.xml,
  oracle-jdk-bin-1.8.0.40.ebuild:
  Install JavaFX sources as well as JVM sources. Document source USE flag. Fix
  bug 544478.

*oracle-jdk-bin-1.8.0.40 (03 Mar 2015)

  03 Mar 2015; James Le Cuirot <chewi@gentoo.org>
  +oracle-jdk-bin-1.8.0.40.ebuild, -oracle-jdk-bin-1.8.0.31.ebuild:
  Version bump of oracle-jdk-bin:8 wrt bug #542044

  30 Jan 2015; Johann Schmitz <ercpe@gentoo.org>
  -oracle-jdk-bin-1.7.0.71.ebuild, -oracle-jdk-bin-1.7.0.72.ebuild,
  -oracle-jdk-bin-1.8.0.25.ebuild:
  Removed vulnerable versions (#537214)

  28 Jan 2015; Agostino Sarubbo <ago@gentoo.org> oracle-jdk-bin-1.7.0.76.ebuild:
  Stable for x86, wrt bug #537214

  28 Jan 2015; Agostino Sarubbo <ago@gentoo.org> oracle-jdk-bin-1.7.0.76.ebuild:
  Stable for amd64, wrt bug #537214

*oracle-jdk-bin-1.8.0.31 (23 Jan 2015)

  23 Jan 2015; Johann Schmitz <ercpe@gentoo.org>
  +oracle-jdk-bin-1.8.0.31.ebuild:
  Version bump of oracle-jdk-bin:8 wrt bug #537214

*oracle-jdk-bin-1.7.0.76 (23 Jan 2015)

  23 Jan 2015; Johann Schmitz <ercpe@gentoo.org>
  +oracle-jdk-bin-1.7.0.76.ebuild:
  Version bump of oracle-jdk-bin:7 wrt bug #537214

  31 Dec 2014; Fabian Groffen <grobian@gentoo.org>
  oracle-jdk-bin-1.8.0.25.ebuild:
  Solaris tars don't include jre/lib/desktop either

  07 Nov 2014; Johann Schmitz <ercpe@gentoo.org> oracle-jdk-bin-1.7.0.72.ebuild:
  Fixed javafx dependency (bug #528414), corrected checksum of demos (bug
  #528490)

*oracle-jdk-bin-1.7.0.72 (04 Nov 2014)

  04 Nov 2014; Johann Schmitz <ercpe@gentoo.org>
  +oracle-jdk-bin-1.7.0.72.ebuild:
  Version bump to 1.7.0.72 (bug #519182)

  02 Nov 2014; Vlastimil Babka <caster@gentoo.org>
  -oracle-jdk-bin-1.7.0.65.ebuild, -oracle-jdk-bin-1.7.0.67.ebuild,