@@ -52,17 +52,18 @@ DIST jdk-8u40-solaris-x64-demos.tar.gz 9737226 SHA256 8240f6e2816dcf3e7669fe3134
 DIST jdk-8u40-solaris-x64.tar.gz 94276101 SHA256 d84da462b1214947038336e967371e3a818ef30f2e2c5ae35600c5803862712d SHA512 84a98a89343beeaab6d5f4985cbeeb57443a7b7cccd936b40350ecd9a1334a14bcd06f6a67df172406e76efdea5236986bec38833350a8547e15e14926370b4c WHIRLPOOL 5b3656cded7616f8b6a11c04447fd503ba48752866313d1fbf0824c14a312c2b4c04dfe7c0175ba3a7a6dd01301f892569856e84c16dd6d6f5a17c8784812caa
 EBUILD oracle-jdk-bin-1.7.0.60.ebuild 9910 SHA256 ba9f626a5e86a9860fa995debef6c60b5a0842d6bee5384f7bf64112026fa232 SHA512 1261a52e8dfb9112dab4e5f03b47cdb5552a99fa8929db6f527f937110320da535fc97914d4be655b78b64f82c0c477ab6bd5bb273c34e1aa27a0e289d8bcda8 WHIRLPOOL 0a3424b4d9cc3e10c5649bd3e45774b63b9acaec6cf03bf5dfabd49324487d9a3fba9dd6bb572167ccbf5495a391aeff14feb629fc448880e0315ddd91478cf8
 EBUILD oracle-jdk-bin-1.7.0.76.ebuild 10594 SHA256 7db1e102db082bfd98059f6ee2b36e97f307885d1ee129ea3148d5ec72a35877 SHA512 e4d4fce0cb16fd24dad6c9b7381e73bce5ffff5ebba8d6fc346128b5d6d559999342cfd9a5889ae00237cfb50bd881918fa9f3a489df58ee836c0201247645f0 WHIRLPOOL f432fb61efac033c4ab56d25d3e9d1c895b1b620be7efb74d585a4277ddb0ed3c093a48ddc4043bfb7b6ad769e221bd4243122bb849fd3420248892652aa3ea2
-EBUILD oracle-jdk-bin-1.8.0.40.ebuild 10477 SHA256 207ef07b9f8395f6eadea52f43b5365612e073bfc6ea791841a17be7fd6dd553 SHA512 45b515ddb88a75d48f2679cf48e81d1b9dcd32f439cb0a79ffec2f34b5e534c609059b5ac960f4e1c9c13f2f269ab00a4a27a760846ec2c12fa13e009a3867ed WHIRLPOOL 8335e29de9a4c7f576cc16ff1e517007e13ef7b692b5da6cabef31d3f9118b776b804135f04de58b5e4a8e06ca49f9e0f8f911402f446e131c8955b7ff65e65a
-MISC ChangeLog 15722 SHA256 118a8936847a7f8914b2bc24067b44a6f6103d22ea80b5892e3cb39645f6439a SHA512 0557b5feb24d2646779b6c42872454e76e85a5504eb706f72e13dd374f3dc9437bf6895f271cebc41cc143577c0b00b1eff293b09d2d36af581db15fb054ba57 WHIRLPOOL cb8a37d0d2692733097bd2aa4e35f85ee4e9393a1d099f4a7ae569d1772217d59267b02ce811946815580ff76f7c0360d88ddcc639eb889c409cac4a160cac16
+EBUILD oracle-jdk-bin-1.8.0.40-r1.ebuild 10480 SHA256 3ae3938667290c1abbde6f0d361b5ce779fc2bc3b17120924b2f8fc7b9d2c0dd SHA512 072cf5b02a7d85e7fe8150af232caa24e216c8b3c371a168bd0213454f240a01dc2897b5406edde389b79690ac3dadf75c7353a0149c032e1da486c3f2e23367 WHIRLPOOL f547830229bd9c552aadd9c2cccd3381b930066d491efa379c644207f286704ba13fe4b7a8f5050815a6cca3bd85af1caa5347c119a510e50588eee05a5891a6
+EBUILD oracle-jdk-bin-1.8.0.40.ebuild 10359 SHA256 e69e217d8309f93a3ce86fc82954c7dd5f642bbd1bcff9cc7cf041f9e525868e SHA512 b64a5769c26ca8261f54b58cd8d1349deb13959ee69a4675b30635c5359b6aa0421b0ae9d5c75bbfe545c66b9a8b162149e45fd7c8f84ee1c0c28f46006ecd19 WHIRLPOOL f07d65638d9e1e96ee51e203b659f75e4449ed0f40e5ef9e480a597c0f888ad81a3834820dc1bac7a80f8d16b6bbc4c19c99286646b2e96f400889f03365f189
+MISC ChangeLog 15945 SHA256 0ffb9b2160d67aab13120b11e50430db678387fb24d65ead5dde2bb6e2c380ff SHA512 3ce5deae084f5ce36ff4cafa872832a5a955e565d442b8b91f4aa21550158bf4f99a8ca8a29bcc4502cefb384162bd549b18a216fe40ca21f28631f40c581a0a WHIRLPOOL e1c29cab7412a52466d27b9083f8ec158306de8ded5477e8ce383d538ed39308e0ab6764ce6f8c10eba2bcab9a0bc72c19561e9d17419ff76f04b909566add3a
 MISC metadata.xml 582 SHA256 2115f948949343a0508b93b9664bed54d6cf051f70f26b33dd5a759b556b03a7 SHA512 4afb2242de1f65646e1fce1e46f64b4ba34c507f9eeba967127d55fd192f104633e3f126c1ce99834e7d154eabcbf6db8c1442649001734c58156d55c572c9cd WHIRLPOOL e6ea5237dd342d2acc868eda5a564c3d48f1114359763cb1037e408ff98555213bdb2c555cedc6d0ec5de3f02cf6caaf17c8f1562ccd6cb4f8b4cca562db5316
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJVFCt/AAoJEJGRpfGTSRu4WH8IAINP+Dk8khXkvfXGZE4wpUvO
-nQ7gtnQq+RHkbanlkfF1zzqRW8VWKcfWljXjLN1LB7EH3pxyIBXYyuAh8a9T2vLW
-Z/roJsovFI7q66cj71MRD3LoP2p4dvhq/YHdgrsg8PB2P/HgjKnUSxUtex/O6ADt
-OC6qHuT+d4m6vCf/16rXOyM+kYOkHLSCN6WY8zer6PgwGYtOFVJbmtbeTSJqbjpG
-aGjYv/lViFsKeP+YXfrCBh7BOmB7JrNIMsRbeRwpoqR296KJHjALx4Hv5wbO1V3M
-nHupBLtWPN+1O8agoTgLFrjGkKgVPqIWYJEb725yQR8qCGNLxnBVFzuzRR+w5fk=
-=3ojG
+iQEcBAEBCAAGBQJVFC6NAAoJEJGRpfGTSRu43skIAMSw005lk6WhlzFawOum6ZdX
+v2RCOASiPZXa9S7oFF3CNKwWcSKGeNzF6kq+j7vsWkZSd9jo4k0f5KsFrZbqlY3z
+aM+Spl85ZQVCU1LUDw5STPU8t/GBSQmFQnj97PK6kpFerTq46oC/I3iQrRMmgGhx
+yRZIPaZrmtrOyaYcbC7ApHNJ3v6xFyigDd97T6LOn+ZAusmkj1U0eb99/3uVLywp
+1AM73OoMNNSw5wRADFlvG+m+K8iFunK8ZsaqmZFa8htQvDN1m/m50BgyyOSDn64H
+w7hvPyiIX1hjkphofP829sDDOySSwIvM8BZ6bvvoGCtkYA6xYHKmMXoWYxptdwY=
+=I/bH
 -----END PGP SIGNATURE-----
